# saas-core-api

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  datasource.yml  docker-compose-dev.yml  docker-compose-override.yml  docker-compose.yml  prometheus.yml  pull_request_template.md
backend/: alembic.ini  backend-image-build.dockerfile  backend-prod.dockerfile  backend.dockerfile  backend_test.dockerfile  build-publish.sh  celeryworker.dockerfile  prestart.sh  pyproject.toml  requirements.txt  tests-start.sh  worker-start.sh
backend/app/: main.py  session.py
backend/app/api/: __init__.py  deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  bills.py  courses.py  events.py  login.py  organization_members.py  organizations.py  subaccounts.py  transactions.py  users.py  utils.py  valuesets.py  wallets.py
backend/app/config/: api_config.py  asgi.py  settings.py  urls.py  wsgi.py
backend/app/core/: config.py  security.py  session.py
backend/app/crud/: __init__.py  base.py  crud_base.py  crud_bill.py  crud_course.py  crud_event.py  crud_organization.py  crud_organization_member.py  crud_otp.py  crud_subaccount.py  crud_transaction.py  crud_user.py  crud_wallet.py  crud_wallet_policy.py
backend/app/db/: init_db.py  session.py
backend/app/django_api/: apps.py  managers.py  models.py
backend/app/django_emr/: alembic.ini  session.py
backend/app/django_emr/api/: deps.py
backend/app/django_emr/api/api_v2/: api.py
backend/app/django_emr/api/api_v2/endpoints/: auth.py  patients.py
backend/app/django_emr/crud/: crud_patient.py  crud_user.py
backend/app/django_emr/models/: patient.py  user.py
backend/app/django_emr/utils/: __init__.py  security.py
backend/app/exceptions/: __init__.py  api_error_response.py
backend/app/middleware/: pagination.py
backend/app/migrations/: README  README.md  env.py
backend/app/migrations/versions/: 0b0c3440131f_setup_organizations.py  43fcee9accc7_create_organization.py  5a68bdd27ef3_add_user_oauth2_scopes.py  7c220088e286_subaccounts.py  81916dc4793f_make_organization_owner_mobile_optional.py  86a5a6f99850_add_user_demographics.py  8c5ed6379ac3_setup_organization_members.py  8d396dda02df_transactions.py  8edb44ce233c_create_wallet.py  97e9500bcc7f_bills.py  aa40dea29fbf_create_a_course.py  ac944c262643_setup_users_and_otp.py  b1fd0e2fb2ff_set_unique_props_on_user.py  bc98e4a4101d_make_uuid_unique.py  c72242684046_create_wallet_policy.py  cf35762b4713_create_otp_table.py  d772a9119033_init.py  eded1457bdee_add_token_type_and_active_flag_to_otp.py  eded1457bdee_add_token_type_to_otp.py
backend/app/models/: README.md  __init__.py  abstract.py  bill.py  course.py  encode_models.py  event.py  organization.py  organization_member.py  otp.py  subaccount.py  transaction.py  user.py  wallet.py  wallet_policy.py
backend/app/schemas/: __init__.py  abstract.py  bank.py  choices.py  country.py  token.py  transaction.py  valueset.py
backend/app/schemas/templates/: crud_template.py  model_template.py  template_endpoint.py
backend/app/utils/: __init__.py  bank.py  django_emr.py  messaging.py  parser.py  security.py  valueset_generator.py  wallet.py
backend/data_bridge/: main.py
backend/data_bridge/core/: config.py  security.py
backend/data_bridge/django_emr/: session.py
backend/data_bridge/django_emr/api/: __init__.py  deps.py
backend/data_bridge/django_emr/api/api_v2/endpoints/: auth.py  patients.py
backend/data_bridge/django_emr/crud/: __init__.py  crud_patient.py  crud_user.py
backend/data_bridge/django_emr/models/: __init__.py  abstract.py  patient.py  user.py
backend/data_bridge/exceptions/: api_error_response.py
backend/data_bridge/middleware/: pagination.py
backend/data_bridge/patient_portal/: alembic.ini  session.py
backend/data_bridge/patient_portal/api/: __init__.py  deps.py
backend/data_bridge/patient_portal/api/api_v2/: api.py
backend/data_bridge/patient_portal/api/api_v2/endpoints/: auth.py
backend/data_bridge/patient_portal/crud/: crud_otp.py  crud_user.py
backend/data_bridge/patient_portal/models/: __init__.py  abstract.py  otp.py  user.py
backend/data_bridge/patient_portal/utils/: security.py
backend/data_bridge/schemas/: __init__.py  bank.py  crud_base.py  token.py
backend/data_bridge/utils/: __init__.py  bank.py  messaging.py  security.py
backend/scripts/: format.sh  prestart.sh  start-reload.sh
backend/tests/: conftest.py  test_auth.py  test_main.py  test_senta_backend.py  test_users.py
proxy/: traefik.prod.toml
