[tool.poetry]
name = "senta-backend"
version = "0.1.0"
description = ""
authors = ["Chris Dare <engineering@chrisdare.me>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.2"
gunicorn = "^20.1.0"
uvicorn = "^0.9.0"
fastapi = "^0.85.1"
orm = "^0.3.1"
asyncpg = "^0.26.0"
pydantic = "^1.10.2"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
