[tool.poetry]
name = "sentabackend"
version = "0.1.0"
description = ""
authors = ["Chris Dare <engineering@chrisdare.me>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.19.0"
fastapi = "^0.85.1"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
celery = "^4.4.2"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.10.2"
emails = "^0.5.15"
raven = "^6.10.0"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
pytest = "^5.4.1"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
django = "^4.1.2"
orm = "^0.3.1"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.5"
sqlmodel = "^0.0.8"
phonenumbers = "^8.12.57"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"


[tool.poetry.group.dev.dependencies]
autoflake = "^1.7.7"
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
parallel = true
source = [
    "docs_src",
    "tests",
    "app"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
known_third_party = ["sentabackend"]
skip_glob = [
    "app/__init__.py",
    ]


[tool.mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true 
disallow_untyped_calls = true 
disallow_untyped_defs = true
disallow_incomplete_defs = true 
check_untyped_defs = true 
disallow_untyped_decorators = true 
no_implicit_optional = true
warn_redundant_casts = true 
warn_unused_ignores = true
warn_return_any = true 
implicit_reexport = false
strict_equality = true
# --strict end

[[tool.mypy.overrides]]
module = "sqlmodel.sql.expression"
warn_unused_ignores = false

# invalidate CI cache: 1
